[package]
name = "sign-message-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.7.0"
web3 = "0.17.0"
hex = "0.4.3"
bytes = "1.1.0"
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
